<resources>
    <string name="app_name">Planetário</string>
    <string name="tituloLogin">PLANETÁRIO</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_login">login</string>
    <string name="txt_senha">senha</string>
    <string name="txt_usuario">usuário</string>
    <string name="title_activity_act__cad__user">Cadastro</string>
    <string name="title_activity_act__cad_user">Cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="title_activity_act__cad">Cadastro</string>


    <string name="subTitLogin">Astros, Sistemas e Galáxias</string>


    <string name="title_activity_act_cad">Cadastro</string>
    <string name="title_activity_act__inicio">Act_Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Planetário</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="action_settings">Configurações</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Adicionar Astro</string>
    <string name="menu_remover">Remover Astro</string>
    <string name="menu_modificar">Modificar Astro</string>

    <string name="txt_sobre">Sobre</string>
    <string name="txt_sair">Sair</string>
    <string name="consultar_astro">Consultar Astro</string>
    <string name="listar_astros">Listar Astros</string>
    <string name="escolha">Escolha a entidade</string>
    <string name="planeta">Planeta</string>
    <string name="sistema_planet">Sistema Planetário</string>
    <string name="galaxia">Galáxia</string>
    <string name="satelite_natural">Satélite Natural</string>
    <string name="estrela">Estrela</string>
    <string name="versao">Versão: 1.0</string>
    <string name="desenvolvido">Desenvolvido por:</string>
    <string name="filipe_jose">Filipe Nascimento e José Vitor</string>
    <string name="title_activity_act__consulta">Consulta %1$s</string>
    <string name="consultar">Consultar</string>
    <string name="title_activity_act__planeta">Act_Planeta</string>
    <string name="title_activity_act_planeta">ActPlaneta</string>
    <string name="title_activity_act_listar">ActListar</string>
    <string name="modificar">Modificar</string>
    <string name="title_activity_act_modificar_planeta">ActModificarPlaneta</string>
    <string name="title_activity_act_adicionar">Adicionar Planeta</string>
    <string name="title_activity_act_remover">ActRemover</string>
    <string name="remover">Remover</string>
    <string name="title_activity_act_adicionar_galaxia">ActAdicionarGalaxia</string>
    <string name="adicionar">Adicionar</string>
    <string name="title_activity_act_adicionar_sistema">ActAdicionarSistema</string>
    <string name="title_activity_act_adicionar_satelite">ActAdicionarSatelite</string>
    <string name="title_activity_act_adicionar_estrela">ActAdicionarEstrela</string>
    <string name="title_activity_act_estrela">ActEstrela</string>
    <string name="title_activity_act_galaxia">ActGalaxia</string>
    <string name="title_activity_act_sistema">ActSistema</string>
    <string name="title_activity_act_satelite">ActSatelite</string>
    <string name="btn_radio_morreu">Morreu</string>
    <string name="btn_lista_buraco_negro">Buracos Negros</string>
    <string name="btn_remover_buraco">Remover</string>
    <string name="btn_adicionar_orbita">Adicionar Órbita</string>
    <string name="btn_remover_orbita">Remover Órbita</string>


</resources>
