<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Esse arquivo adiciona os itens ao menu lateral
         existem dois agrupamentos de opções no menu
    -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_remover"
            android:icon="@drawable/ic_remove_circle_black_24dp"
            android:title="@string/menu_remover" />
        <item
            android:id="@+id/nav_modificar"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_modificar" />

        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/consultar_astro" />

        <item
            android:id="@+id/nav_listar"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/listar_astros" />

       
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/txt_sobre" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/txt_sair" />
        </menu>
    </item>

</menu>
