<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    Esse arquivo linka os itens do menu ao fragments
    fragments são as telas chamadas por cada opção do menu
    -->

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appplanetario.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.appplanetario.ui.add.AdicionarFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_adicionar" />

    <fragment
        android:id="@+id/nav_remover"
        android:name="com.example.appplanetario.ui.remover.RemoverFragment"
        android:label="@string/menu_remover"
        tools:layout="@layout/fragment_remover" />

    <fragment
        android:id="@+id/nav_modificar"
        android:name="com.example.appplanetario.ui.modificar.ModificarFragment"
        android:label="@string/menu_modificar"
        tools:layout="@layout/fragment_modificar" />

    <fragment
        android:id="@+id/nav_consulta"
        android:name="com.example.appplanetario.ui.consultar.ConsultarFragment"
        android:label="@string/consultar_astro"
        tools:layout="@layout/fragment_consultar" />

    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.appplanetario.ui.listar.ListarFragment"
        android:label="@string/listar_astros"
        tools:layout="@layout/fragment_listar" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.appplanetario.ui.sobre.SobreFragment"
        android:label="@string/txt_sobre"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/nav_sair"
        android:name="com.example.appplanetario.ui.sair.SairFragment"
        android:label="@string/txt_sair"
        />
</navigation>